--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ffmpeg.js",
-  "version": "4.2.9003",
+  "name": "ffmpeg.js-pivot",
+  "version": "0.1.0",
   "description": "Port of FFmpeg with Emscripten",
   "main": "ffmpeg-webm.js",
   "scripts": {
